[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/character/character-idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://sounds/footstep04.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/character/character-run.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
height = 12.0

[sub_resource type="CapsuleShape2D" id=11]
height = 12.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 16, 16 )
script = ExtResource( 2 )

[node name="AnimatedPlayer" type="AnimatedSprite" parent="."]
position = Vector2( -15.8512, -16.0717 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -16, -16 )
shape = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -16, -16 )
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_enabled = true

[node name="Player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -16, -16 )
shape = SubResource( 11 )

[node name="steps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="area_exited" from="Player" to="." method="_on_Player_area_exited"]
